--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile "com.android.support:design-v4:25.1.1"
     compile 'io.realm:android-adapters:1.4.0'
     compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
