--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,9 @@ dependencies {
     compile "com.android.support:design:25.2.0"
     compile 'io.realm:android-adapters:1.4.0'
     compile 'com.android.support:support-v4:25.2.0'
+
+    compile "com.google.dagger:dagger:2.9"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
+    provided 'javax.annotation:jsr250-api:1.0'
     testCompile 'junit:junit:4.12'
 }
