--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="br.com.halph.agendafeliz">
 
     <application
+        android:name=".AgendaFelizApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ico"
         android:label="@string/app_name"
