Commitando o ripple effect como lib pq pelo gradle está bugado. O frag de form para contatos está com alguns códigos de teste de inclusão de views em runtime para inplementação dos botões de inclusão de telefone

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.9"
     provided 'javax.annotation:jsr250-api:1.0'
 
+    compile project(':ripple')
+
     compile "com.andkulikov:transitionseverywhere:1.7.0"
 
     compile 'com.jakewharton:butterknife:8.5.1'
